Fix ReflectionTest